# process-viewer

./: .gitignore  .replit  MANIFEST.in  README.md  keybindings.py  main.py  process_manager.py  pyproject.toml  replit_zip_error_log.txt  resource_graphs.py  setup.py  ui_components.py  utils.py
process_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/process_viewer/: __init__.py  main.py  process_manager.py  ui_components.py
src/process_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
