[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-viewer"
version = "0.1.0"
description = "A terminal-based process visualization tool providing real-time system process monitoring and management capabilities."
readme = "README.md"
authors = [
    { name = "Rohit Ghumare", email = "ghumare64@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "psutil>=6.1.0",
    "curses-menu>=0.7.0",
]

[project.scripts]
process-viewer = "process_viewer.main:run"

[project.urls]
Homepage = "https://github.com/rohitghumare/process-viewer"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["process_viewer"]
