[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-viewer"
version = "0.1.0"
description = "A terminal-based process visualization tool providing real-time system process monitoring and management capabilities."
readme = "README.md"
authors = [
    { name = "Rohit Ghumare", email = "ghumare64@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "psutil>=6.1.0",
    "curses-menu>=0.7.0",
    "wheel>=0.45.1",
    "setuptools>=75.6.0",
    "build>=1.2.2.post1",
    "twine>=6.0.1",
]

[project.scripts]
process-viewer = "process_viewer.main:run"

[project.urls]
Homepage = "https://github.com/rohitg00/process-viewer"
Repository = "https://github.com/rohitg00/process-viewer"
Issues = "https://github.com/rohitg00/process-viewer/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["process_viewer"]
